<resources>
    <string name="app_name">Hotel_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_txt">Электронная почта</string>
    <string name="password_txt">Пароль</string>
    <string name="input_txt">Войти</string>
    <string name="regestration_txt">Зарегистрироваться</string>
    <string name="regest_txt">Регистрация</string>
    <string name="logo_desc">logoDesk</string>
    <string name="name_txt">Имя</string>
    <string name="surname_txt">Фамилия</string>
    <string name="birthday_txt">Дата рождения</string>
    <string name="pasport_txt">Паспортные данные</string>
    <string name="phone_txt">Контактный телефон</string>
    <string name="back_txt">Назад</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>